# fm-playlist-recommender

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: questions_v1.md  questions_v2.md
data/v1/: artists.jsonl  sessions.jsonl  track_storage.jsonl  users.jsonl
data/v2/: artists.jsonl  sessions.jsonl  users.jsonl
data/v3/: users.jsonl
doc/stage1/: .gitignore  ium-towienko-aschafer-23z-etap1.tex
doc/stage2/: ium-towienko-aschafer-23z-etap2.tex
src/: create_models.py  dataset-test.ipynb  example.ipynb  explore_kwargs.py  functions.py  hand-waving-stolen-data.ipynb  hand-waving.ipynb  hand-waving2.ipynb  hyperparams.ipynb  lightfm-test.ipynb  logging.py  main.py  messing-around.ipynb  one-more-try.ipynb  predictions.jsonl  pyproject.toml  recommender.py  requirements.txt  schemas.py  test_serialized.ipynb  training.py  util.py
src/model/: base_model.py  fm_model.py  model_protocol.py  recommender.py
src/old/: hand-waving-stolen-data.ipynb  hand-waving.ipynb  help_plz.ipynb  messing-around.ipynb
src/spark/: config.py  create_session.py
