[tool.poetry]
name = "ium-towienko-aschafer-23z"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
pyspark = "^3.5.0"
pyarrow = "^14.0.1"
fitter = "^1.6.0"
wheel = "^0.42.0"
setuptools = "^69.0.2"
lightfm = "^1.17"
uvicorn = "^0.25.0"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
